--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.12.0",
+    "@headlessui/react": "^2.2.8",
+    "@heroicons/react": "^2.2.0",
     "aws-amplify": "^6.15.5",
     "next": "^15.5.3",
     "react": "19.1.0",
