--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@aws-amplify/ui-react": "^6.12.0",
     "@headlessui/react": "^2.2.8",
     "@heroicons/react": "^2.2.0",
+    "@types/react-datepicker": "^6.2.0",
     "aws-amplify": "^6.15.5",
     "next": "^15.5.3",
     "react": "19.1.0",
+    "react-datepicker": "^8.7.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
